<resources>
    <string name="app_name">Aeropedia</string>
    <string name="manufacturers">Manufacturers</string>
    <string name="ask_alexa">Ask Alexa</string>
    <string name="flight_tracker">Flight Tracker</string>
    <string name="firebase">My Aircraft</string>
    <string name="airbus">Airbus</string>
    <string name="boeing">Boeing</string>
    <string name="embraer">Embraer</string>
    <string name="bombardier">Bombardier</string>
    <string name="cessna">Cessna</string>
    <string name="gulfstream">Gulfstream</string>
    <string name="antonov">Antonov</string>
    <string name="a350">A350</string>
    <string name="a380">A380</string>
    <string name="a320">A320</string>
    <string name="a319">A319</string>
    <string name="a318">A318</string>
    <string name="a300">A300</string>
    <string name="a310">A310</string>
    <string name="a340">A340</string>
    <string name="a321">A321</string>
    <string name="a330">A330</string>
    <string name="a330neo">A330neo</string>
    <string name="a320neofamily">A320neo Family</string>
    <string name="a220">A220</string>
    <string name="beluga">Beluga</string>
    <string name="an124">An-124 Ruslan</string>
    <string name="an72">An-72 Cheburashka</string>
    <string name="an22">An-22 Antei</string>
    <string name="an225">An-225 Mriya</string>
    <string name="b787">787</string>
    <string name="b737">737</string>
    <string name="b757">757</string>
    <string name="b747">747</string>
    <string name="b767">767</string>
    <string name="b777">777</string>
    <string name="learjet75">Learjet 75</string>
    <string name="challenger650">Challenger 650</string>
    <string name="global7500">Global 7500</string>
    <string name="crj_100_200">CRJ100/200</string>
    <string name="erj_family">ERJ Family</string>
    <string name="language"><b>FR</b></string>
    <string name="type">Type</string>
    <string name="engine">Engine</string>
    <string name="first_flight">First flight</string>
    <string name="intro">Introduction</string>
    <string name="customer">Largest operator</string>
    <string name="variants">Variants</string>
    <string name="specs">Specifications</string>
    <string name="cockpit_crew">Cockpit crew</string>
    <string name="wingspan">Wing span</string>
    <string name="length">Length</string>
    <string name="height">Height</string>
    <string name="fuselage">Fuselage</string>
    <string name="gross_weight">Gross weight</string>
    <string name="mtow">MTOW</string>
    <string name="cruise_speed">Cruise speed</string>
    <string name="range">Range</string>
    <string name="thrust2">Thrust (2x)</string>
    <string name="thrust4">Thrust (4x)</string>
    <string name="thrust6">Thrust (6x)</string>
    <string name="propellers">Propellers</string>
    <string name="numbers">Numbers built</string>
    <string name="shaft_horse_power">Shaft Horse Power</string>
    <string name="a350_type_value">Wide-body</string>
    <string name="a350_engine_value">Rolls-Royce Trent XWB (2)</string>
    <string name="a350_first_flight_value">14 June 2013</string>
    <string name="a350_intro_value">15 January 2015\nwith Qatar Airways</string>
    <string name="a350_customer_value">Singapore Airlines</string>
    <string name="a350_variants_value">2 (active)</string>
    <string name="a350_desc1">The Airbus A350 is a long-range, wide-body jet airliner. The first A350 design proposed by Airbus in 2004,
        in response to Boeing\'s 787 Dreamliner, would have been a development of the A330 (hence A330-Lite) with composite wings and new engines. However,
        market support was inadequate at the time and in 2006, Airbus switched to a clean-sheet XWB (eXtra Wide Body) design, powered by Rolls-Royce Trent XWB
        turbofan engines. The A350 is the first aircraft of the Airbus family that is largely made of carbon fibre reinforced polymer. It features a new fuselage designed around a
        nine-abreast economy cross-section, up from the eight-abreast A330/A340. The A350 has been in production since 2010 and in total 425 A350s have been built as of
        31 May 2021.\n\nThe A350 XWB airframe is made out of 53% composites: carbon fibre reinforced plastic for the outer and centre wing box (covers, stringers, spars),
        fuselage (skin, frame, keel beam, and rear fuselage) and the empennage (horizontal and vertical tailplanes); 19% aluminium and aluminium–lithium alloy for ribs,
        floor beams, and gear bays; 14% titanium for landing gears, pylons, and attachments; 6% steel; and 8% miscellaneous. For the wings, those mark a 31.9° sweep angle for a
        Mach 0.85 cruise speed and has a maximum operating speed of Mach 0.89, with the wingtip device curving upwards over the final 4.4 m (14 ft) - reducing air resistance and
        subsequently increasing the aircraft’s range whilst restricting fuel consumption to minimum.\n</string>
    <string name="a350_desc2" formatted="false">For the deck and avionics design,
        the design strategy for Airbus\' own A380 was used as a base. The focus of the company was to evolve technology for A350 further than the advances already made
        by the A380. It is one of three aircraft to feature avionics manufacturer Honeywell\’s Aircraft Environmental Surveillance System (AESS) which integrates weather, traffic and
        terrain awareness capabilities reducing as many as eight avionics boxes down to just two. It also features On-Board Airport Navigation System (OANS) which first debuted with
        the A380. This system provides real-time directions around airports and improves navigation on the ground. The system is especially useful in poor visibility conditions
        and helps to reduce errors in airport navigation by warning the pilots if they are going the wrong way. To help the pilots further, Airbus equipped the aircraft
        with External and Taxiing Aid Camera System (ETACS) for better navigation and aircraft positioning on the ground. digital cameras provide the pilots with views
        from outside with one positioned behind the nose wheel and the other in the vertical tail. The views from the cameras can be displayed in the A350 cockpit on displays
        and as well as on the passenger in-flight entertainment screens.\n\nThe Airbus A350 consumes 25% less fuel and emits 25% less emissions than previous generations and according to Airbus it is the quietest two aisle plane
        on the planet. Australia\'s Qantas chose A350 over Boeing\'s 787 Dreamliner for "Project Sunrise" – a codename for proposed nonstop flights between Australia
        and several international destinations that include London, New York and Paris.\n
    </string>
    <string name="a350_desc3">\nAirbus A350\'s variants include A350-800, A350-900, A350-ULR, ACJ350, A350 Regional, A350-950 F, A350-1000, although some of
        these were discontinued or did not make it past the early stages.\n</string>
    <string name="a350_specs_constraint">(-900 and -1000 variants compared in order)\n</string>
    <string name="a350_wingspan_value">64.75 m</string>
    <string name="a350_length_value">66.8 / 73.79 m</string>
    <string name="a350_height_value">17.05 / 17.08 m</string>
    <string name="a350_fuselage_value">5.96 m (W) / 6.09 m (H)</string>
    <string name="a350_mtow_value">280 / 316 t</string>
    <string name="a350_cruise_speed_value">903 km/h (typical),\n950 km/h (max.)</string>
    <string name="a350_range_value">8100 / 8700 nmi</string>
    <string name="a350_thrust_value">374.5 / 431.5 kN</string>
    <string name="a350_identify">How to identify Airbus A350?</string>
    <string name="a350_identify_ans">The unique 6-piece round-edged windscreen configuration with black border, distinctive nose, smoothly curved sharklets like those on A330neo.</string>
    <string name="a380_type_value">Wide-body</string>
    <string name="a380_engine_value">Rolls-Royce Trent 900 (4)/\nEngine Alliance GP7000(4)</string>
    <string name="a380_first_flight_value">27 April 2005</string>
    <string name="a380_intro_value">25 October 2007\nwith Singapore Airlines</string>
    <string name="a380_customer_value">Emirates</string>
    <string name="a380_variants_value">4 (active)</string>
    <string name="a380_desc1" formatted="false">The Airbus A380 is the world\'s largest passenger airliner. Airbus studies started in 1988, and the project was announced in
        1990 to challenge the dominance of the Boeing 747 in the long haul market. The then-designated A3XX project was presented in 1994. Airbus launched
        the €9.5 billion ($10.7 billion) A380 programme on 19 December 2000. As of 31 December 2020, 246 A380s have been built, most of which went to
        the fleet family of Emirates. The aircraft still remains in service for many airlines but is no longer in production on Airbus\' side.\n\nThe A380\'s upper and
        lower decks are connected by two stairways, one fore and one aft, with both being wide enough to accommodate two passengers side by side. This cabin arrangement
        allows multiple seat configurations. The maximum certified carrying capacity is 853 passengers in an all-economy-class layout, Airbus lists the "typical"
        three-class layout as accommodating 525 passengers, with 10 first, 76 business, and 439 economy class seats. Airline configurations range from Korean Air\'s
        407 passengers to Emirates\' two-class 615 seats and average around 480–490 seats.
        \n\nWhile most of
        the fuselage is made of aluminium alloys, composite materials comprise more than 20% of the A380\'s airframe. Carbon-fibre reinforced plastic, glass-fibre
        reinforced plastic and quartz-fibre reinforced plastic are used extensively in wings, fuselage sections (such as the undercarriage and rear end of fuselage),
        tail surfaces, and doors. The A380, often nicknamed the superjumbo, is the first commercial airliner to have a central wing box made of carbon–fibre reinforced plastic. It is
        also the first to have a smoothly contoured wing cross–section. The wings of other commercial airliners are partitioned span-wise into sections. This flowing
        continuous cross section reduces aerodynamic drag. Thermoplastics are used in the leading edges of the slats. The hybrid fibre metal laminate material GLARE
        (glass laminate aluminium reinforced epoxy) is used in the upper fuselage and on the stabilisers\' leading edges. This aluminium-glass-fibre laminate is
        lighter and has better corrosion and impact resistance than conventional aluminium alloys used in aviation. Unlike earlier composite materials, GLARE can be
        repaired using conventional aluminium repair techniques.\n</string>
</resources>